# xous-core

./: Cargo.toml
services/test-stub3/: Cargo.toml
services/test-stub3/src/: main.rs
services/usb-test/src/: api.rs  main.rs
xtask/src/: main.rs
