[package]
name = "test-stub3"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
description = "Test stub 3"

# Dependency policy: fully specify dependencies to the minor version number
[dependencies]
xous = { path = "../../xous-rs" }
ticktimer-server = { path = "../ticktimer-server" }
log-server = { path = "../log-server" }
log = "0.4.14"

xous-ipc = {path = "../../xous-ipc"}
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
rkyv = {version = "0.4.3", default-features = false, features = ["const_generics"]}

xous-names = { path = "../xous-names" }
usb-test = { path = "../usb-test" }

[target.'cfg(not(any(windows,unix)))'.dependencies]
utralib = {path = "../../utralib"}

[target.'cfg(any(windows,unix))'.dependencies]

[features]
default = []
